# navras_final_demo

./: .gitignore  ACMakeLists.txt  CMakeLists.txt  Log.txt  Navras.exp  Navras.lib  README.md  build.bat  build.sh  execute.bat  internal_build.bat  setup.bat
dll/: README.md
ext/: README.md
inc/: Navras.h  Noise.h  Sphere.h  audioplayer.h  camera.h  common.h  constants.h  geometry.h  texture_loader.h  types.h  video_reader.h
inc/debug/: debug_transformation.h
inc/effects/: ADSLights.h  AtmosphereEffect.h  Billboarding.h  CloudEffect.h  DynamicModelLoadingEffect.h  ErosionEffect.h  GaussianBlurEffect.h  GodraysEffect.h  ParticelEffect.h  README.md  SSAOEffect.h  SkyboxEffect.h  StarfieldEffect.h  StaticModelLoadingEffect.h  TerrainEffect.h  WaterEffect.h  videoEffect.h
inc/helper/: Sphere.h  audioplayer.h  camera.h  common.h  constants.h  constants.h~cruft  framebuffer.h  geometry.h  geometrytypes.h  resources.h  sceneStack.h  scenes_types.h  shaders.h  shadowframebuffer.h  ssaoframebuffer.h  staticModel.h  texture_loader.h  waterframebuffer.h
inc/scenes/: fontRendering.h  scene02_EarthAndSpace.h  scene05_karun.h  scene06_BhayanakRas.h  scene07_Raudra.h  scene08_BibhatsaRas.h  scene09_BibhatsaRas.h  scene09_VeerRas.h  scene10_AdbhutRas.h  scene10_Shrungar.h  scene11_ShringarRas.h  scene12_Hasya.h  scene13_Shant.h  scene5_karun.h  scene7_Raudra.h  scene9_AdbhutRas.h  scene9_VeerRas.h  sceneEarthAndSpace.h  scenePlaceHolder.h  scenePlaceHolderIndoor.h  scenePlaceHolderOutdoor.h  scenes.h  scenes_types.h
inc/shaders/: ADSLightDynamicShader.h  ADSLightShader.h  AtmosphereShader.h  BillboardingShader.h  CloudNoiseShader.h  ErosionNoiseShader.h  FSQuadShader.h  FSVQuadShader.h  FontShader.h  GaussianBlurShader.h  GodraysShader.h  HorrizontalBlur.h  PBRGeometryShader.h  ParticleShader.h  SSAOShader.h  SkyboxShader.h  StarfieldShader.h  TerrainShader.h  VerticalBlur.h  WaterShader.h
lib/: README.md
res/: OGL.rc  OGL.res  README.md  resources.aps  resources.rc
src/: Log.txt  Navras.cpp  Noise.cpp  build.bat  main.cpp  navras.cpp
src/debug/: debug_transformation.cpp
src/effect/: TerrainEffect.cpp
src/effects/: ADSLights.cpp  AtmosphereEffect.cpp  Billboarding.cpp  CloudEffect.cpp  DynamicModelLoadingEffect.cpp  ErosionEffect.cpp  GaussianBlurEffect.cpp  GodraysEffect.cpp  GodraysShader.cpp  README.md  SSAOEffect.cpp  SkyboxEffect.cpp  StarfieldEffect.cpp  StaticModelLoadingEffect.cpp  TerrainEffect.cpp  WaterEffect.cpp  videoEffect.cpp
src/helper/: Billboarding.cpp  README.md  audioplayer.cpp  camera.cpp  common.cpp  framebuffer.cpp  geometry.cpp  sceneStack.cpp  shaders.cpp  shadowframebuffer.cpp  ssaoframebuffer.cpp  texture_loader.cpp  videoreader.cpp  waterframebuffer.cpp
src/include/: OGL.h  common.h  geometry.h  shaders.h
src/main/: main_windows.cpp  main_xwindows.cpp
src/scenes/: ParticleSimulation.cpp  README.md  fontRendering.cpp  scene02_EarthAndSpace.cpp  scene05_karun.cpp  scene06_BhayanakRas.cpp  scene07_Raudra.cpp  scene08_BibhatsaRas.cpp  scene09_BibhatsaRas.cpp  scene09_VeerRas.cpp  scene10_AdbhutRas.cpp  scene10_Shrungar.cpp  scene11_ShringarRas.cpp  scene12_Hasya.cpp  scene13_Shant.cpp  scene15_EndCredits.cpp  scene5_karun.cpp  scene6_Raudra.cpp  scene7_Raudra.cpp  scene9_AdbhutRas.cpp  scene9_VeerRas.cpp  (+5 more)
(+27 files in other folders)
